--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row">
-  <h1 class="text-center">New Campground</h1>
+  <h1 class="text-center text-decoration-underline">New Campground</h1>
   <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds"
@@ -10,7 +10,7 @@
       enctype="multipart/form-data"
     >
       <div class="mb-3">
-        <label class="form-label" for="title">Title</label>
+        <label class="form-label fs-5 fw-bold" for="title">Title</label>
         <input
           class="form-control"
           type="text"
@@ -21,7 +21,7 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="location">Location</label>
+        <label class="form-label fs-5 fw-bold" for="location">Location</label>
         <input
           class="form-control"
           type="text"
@@ -32,7 +32,9 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="price">Campground Price</label>
+        <label class="form-label fs-5 fw-bold" for="price"
+          >Campground Price</label
+        >
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
           <input
@@ -49,7 +51,9 @@
         </div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="description">Description</label>
+        <label class="form-label fs-5 fw-bold" for="description"
+          >Description</label
+        >
         <textarea
           class="form-control"
           type="text"
@@ -60,7 +64,9 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label for="image" class="form-label">Upload Image(s)</label>
+        <label for="image" class="form-label fs-5 fw-bold"
+          >Upload Image(s)</label
+        >
         <input
           class="form-control"
           type="file"
@@ -73,7 +79,6 @@
         <button class="btn btn-success">Add Campground</button>
       </div>
     </form>
-
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds" class="btn btn-secondary">Back to Campgrounds</a>
   </div>
 </div>
